@@ -47,13 +47,13 @@ namespace
       emap(lock::TIMEOUT_HANDLER,        N_("Failed to set timeout handler")),
       emap(lock::TIMEOUT_SET,            N_("Failed to set timeout")),
       emap(lock::TIMEOUT_CANCEL,         N_("Failed to cancel timeout")),
-      emap(lock::LOCK,                   N_("Failed to acquire lock (timed out)")),
-      emap(lock::LOCK_TIMEOUT,           N_("Failed to acquire lock")),
+      emap(lock::LOCK,                   N_("Failed to acquire lock")),
+      emap(lock::LOCK_TIMEOUT,           N_("Failed to acquire lock (timed out after %4% seconds)")),
       emap(lock::DEVICE_LOCK,            N_("Failed to acquire device lock")),
-      emap(lock::DEVICE_LOCK_TIMEOUT,    N_("Failed to acquire device lock (timed out)")),
+      emap(lock::DEVICE_LOCK_TIMEOUT,    N_("Failed to acquire device lock (timed out after %4% seconds; lock held by PID %5%)")),
       emap(lock::DEVICE_TEST,            N_("Failed to test device lock")),
       emap(lock::DEVICE_RELEASE,         N_("Failed to release device lock")),
-      emap(lock::DEVICE_RELEASE_TIMEOUT, N_("Failed to release device lock (timed out)"))
+      emap(lock::DEVICE_RELEASE_TIMEOUT, N_("Failed to release device lock (timed out after %4% seconds; lock held by PID %5%)"))
     };
 
 }
@@ -182,7 +182,7 @@ file_lock::set_lock (type         lock_type,
 		&read_lock) == -1)
 	{
 	  if (errno == EINTR)
-	    throw error(LOCK_TIMEOUT);
+	    throw error(LOCK_TIMEOUT, timeout);
 	  else
 	    throw error(LOCK, strerror(errno));
 	}
@@ -269,12 +269,9 @@ device_lock::set_lock (type         lock_type,
 
       if (lock_timeout)
 	{
-
-	  format fmt(_("lock held by pid %1%"));
-	  fmt % status;
 	  throw error(((lock_type == LOCK_SHARED || lock_type == LOCK_EXCLUSIVE)
 		       ? DEVICE_LOCK_TIMEOUT : DEVICE_RELEASE_TIMEOUT),
-		      fmt.str());
+		      timeout, status);
 	}
       unset_timer();
     }
