@@ -1,5 +1,15 @@
 2006-07-13  Roger Leigh  <rleigh@debian.org>
 
+	* TODO: Remove completed error string markup item.
+
+	* Add boost::format markup to error strings.
+
+	* sbuild/sbuild-custom-error.h: All constructor detail arguments
+	are now templated.  Add additional constructors for multiple detail
+	arguments.
+
+2006-07-13  Roger Leigh  <rleigh@debian.org>
+
 	* sbuild/sbuild-chroot.h: API documentation corrections.
 
 	* sbuild/sbuild-chroot.cc
